--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@cobai/workerd-tools",
-  "version": "1.0.0",
   "private": true,
-  "license": "MIT",
   "devDependencies": {
     "lerna": "3.22.1"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
