--- a/packages/workerd-config/package.json
+++ b/packages/workerd-config/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "capnp:workerd": "./node_modules/.bin/capnpc-js ./lib/config/workerd.capnp",
+    "capnp": "capnpc -o ts ./src/config/workerd.capnp",
     "patch": "patch-package",
     "build": "node ./scripts/build"
   },
@@ -18,7 +18,8 @@
     "minimist": "^1.2.7"
   },
   "devDependencies": {
-    "capnpc-js": "^0.5.1",
+    "capnpc-ts": "^0.7.0",
+    "capnp-ts": "^0.7.0",
     "esbuild": "^0.16.10",
     "npm-dts": "^1.3.12",
     "patch-package": "^6.5.0"
