--- a/packages/workerd-config/tsconfig.json
+++ b/packages/workerd-config/tsconfig.json
@@ -5,10 +5,11 @@
       "declarationDir": "types",
       "declaration": true,
       "emitDeclarationOnly": true,
+      "esModuleInterop": true
    },
    "include": [
       "src/**/*.ts",
       "types/**/*.d.ts"
-    ],
-   "exclude": ["node_modules", "dist"]
+   ],
+   "exclude": ["node_modules", "dist", "src/config/*.ts"]
 }
