--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "node ./workerd.dev.js"
+    "build": "node ./workerd.dev.js",
+    "build:config": "workerd-config -d dist"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "@c0b41/workerd-config": "0.0.1",
     "@c0b41/workerd-dev": "0.0.1"
-  },
-  "devDependencies": {}
+  }
 }
