--- a/packages/workerd-config/package.json
+++ b/packages/workerd-config/package.json
@@ -20,7 +20,6 @@
     "capnpc-ts": "^0.7.0",
     "capnp-ts": "^0.7.0",
     "esbuild": "^0.16.10",
-    "npm-dts": "^1.3.12",
-    "patch-package": "^6.5.0"
+    "npm-dts": "^1.3.12"
   }
 }
