--- a/packages/workerd-service/package.json
+++ b/packages/workerd-service/package.json
@@ -12,12 +12,11 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "dependencies": {
-    "@whatwg-node/fetch": "^0.8.1",
-    "chokidar": "^3.5.3",
-    "docker-names": "^1.2.1",
     "fastify": "^4.10.2",
     "fastify-plugin": "^4.4.0",
-    "fastify-sqlite": "^1.1.0"
+    "fastify-sqlite": "^1.1.0",
+    "http-z": "^6.1.2",
+    "undici": "^5.20.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
