--- a/packages/workerd-config/package.json
+++ b/packages/workerd-config/package.json
@@ -7,18 +7,22 @@
     "build": "node ./scripts/build"
   },
   "files": [
-    "dist/*"
+    "dist/*",
+    "bin/*"
   ],
-  "bin": "./bin/workerd-config",
+  "bin": {
+    "workerd-config": "./bin/workerd-config"
+  },
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
   "dependencies": {
     "docker-names": "^1.2.1",
-    "minimist": "^1.2.7"
+    "minimist": "^1.2.7",
+    "capnp-ts": "^0.7.0"
   },
   "devDependencies": {
     "capnpc-ts": "^0.7.0",
-    "capnp-ts": "^0.7.0",
     "esbuild": "^0.16.10",
     "npm-dts": "^1.3.12"
   }
