--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,9 @@
 {
+  "version": "0.0.0",
   "packages": ["packages/**/*"],
   "npmClient": "yarn",
-  "version": "0.0.0"
+  "useWorkspaces": true,
+  "publishConfig": {
+    "access": "public"
+  }
 }
