--- a/packages/plugins/module.tsconfig.json
+++ b/packages/plugins/module.tsconfig.json
@@ -6,10 +6,11 @@
       "declaration": true,
       "emitDeclarationOnly": true,
       "esModuleInterop": true,
+      "types": ["@cloudflare/workers-types"]
    },
    "include": [
       "src/**/*.ts",
       "types/**/*.d.ts"  
    ],
-   "exclude": ["node_modules", "dist", "src/plugins"]
+   "exclude": ["node_modules", "dist", "src/config/*.ts"]
 }
