--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -16,6 +16,7 @@
     "docker-names": "^1.2.1"
   },
   "devDependencies": {
+    "@c0b41/workerd-config": "0.0.3",
     "@cloudflare/workers-types": "^4.20230404.0",
     "esbuild": "^0.16.10",
     "npm-dts": "^1.3.12"
