--- a/packages/plugins/module.tsconfig.json
+++ b/packages/plugins/module.tsconfig.json
@@ -1,16 +1,13 @@
 {
-   "compilerOptions": {
-      "module": "commonjs",
-      "target": "ESNext",
-      "declarationDir": "types",
-      "declaration": true,
-      "emitDeclarationOnly": true,
-      "esModuleInterop": true,
-      "types": ["@cloudflare/workers-types"]
-   },
-   "include": [
-      "src/**/*.ts",
-      "types/**/*.d.ts"  
-   ],
-   "exclude": ["node_modules", "dist", "src/config/*.ts"]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "ESNext",
+    "declarationDir": "types",
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "esModuleInterop": true,
+    "types": ["@cloudflare/workers-types"]
+  },
+  "include": ["src/**/*.ts", "types/**/*.d.ts"],
+  "exclude": ["node_modules", "dist", "src/config/*.ts", "src/plugins"]
 }
