--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@c0b41/workerd-config": "0.0.3",
     "@supabase/supabase-js": "^2.21.0",
-    "docker-names": "^1.2.1"
+    "docker-names": "^1.2.1",
+    "pg": "^8.11.0",
+    "pg-cloudflare": "^1.1.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
